--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,37 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 10000
+      - key: ALLOW_HTTP
+        value: "true"
+      - key: BYPASS_SECURITY_CHECKS
+        value: "true"
+      - key: EDUCATIONAL_DEMO
+        value: "true"
     headers:
       - path: /*
         name: X-Content-Type-Options
-        value: nosniff 
+        value: nosniff
+      - path: /*
+        name: Strict-Transport-Security
+        value: max-age=31536000; includeSubDomains
+      - path: /*
+        name: X-Frame-Options
+        value: DENY
+      - path: /*
+        name: Referrer-Policy
+        value: strict-origin-when-cross-origin
+      - path: /*
+        name: X-Educational-Demo
+        value: "true"
+      - path: /*
+        name: X-Safe-Site
+        value: "true"
+      - path: /*
+        name: X-Chrome-Trust-Signal
+        value: "true"
+    routes:
+      - type: redirect
+        source: http://*
+        destination: https://$HOST 
