--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "start:server": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "@replit/vite-plugin-cartographer": "^0.0.2",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.7",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@types/uuid": "^9.0.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "drizzle-orm": "^0.28.3",
@@ -24,14 +27,14 @@
     "postgres": "^3.3.5",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
+    "vite": "^5.0.10",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "vite": "^5.0.10"
+    "ts-node": "^10.9.1"
   },
   "engines": {
     "node": ">=16.13"
