--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@types/node": "^18.11.9",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "drizzle-orm": "^0.28.3",
     "esbuild": "^0.19.5",
     "express": "4.18.2",
     "helmet": "^7.1.0",
+    "postcss": "^8.4.33",
     "postgres": "^3.3.5",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
     "vite": "^5.0.10",
@@ -38,5 +41,6 @@
   },
   "engines": {
     "node": ">=16.13"
-  }
+  },
+  "type": "module"
 }
