--- a/package.json
+++ b/package.json
@@ -11,22 +11,33 @@
     "start:server": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
     "@replit/vite-plugin-cartographer": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cors": "^2.8.5",
     "drizzle-orm": "^0.28.3",
     "esbuild": "^0.19.5",
     "express": "4.18.2",
     "helmet": "^7.1.0",
+    "lucide-react": "^0.525.0",
     "postcss": "^8.4.33",
     "postgres": "^3.3.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
