--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "postgres": "^3.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
     "vite": "^5.0.10",
+    "wouter": "^3.7.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
