--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:server": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -40,6 +41,7 @@
     "postgres": "^3.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^7.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
