--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,15 @@ services:
   - type: web
     name: ss-bank
     env: node
-    buildCommand: npm run build
+    buildCommand: |
+      npm install
+      cd client
+      npm install
+      npm run build
+      cd ..
+      esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist
+      mkdir -p dist/client
+      cp -r client/dist/* dist/client/
     startCommand: npm run start:server
     envVars:
       - key: NODE_ENV
