--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "express": "4.18.2",
     "helmet": "^7.1.0",
     "lucide-react": "^0.525.0",
+    "nanoid": "^5.0.4",
     "postcss": "^8.4.33",
     "postgres": "^3.3.5",
     "react": "^19.1.0",
