--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "node fix-windows.js && concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "cd client && npm run dev",
     "dev:server": "nodemon --exec node --loader ts-node/esm server/index.ts",
-    "build": "npm install && cd client && npm install && npm run build && cd .. && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && mkdir -p dist/client && cp -r client/dist/* dist/client/",
+    "build": "npm install && cd client && npm install && npm run build && cd .. && esbuild server/index.ts server/optimize.ts server/performance.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && mkdir -p dist/client && cp -r client/dist/* dist/client/ && node optimize-assets.js",
+    "optimize": "node optimize-assets.js",
     "start": "NODE_ENV=production node dist/index.js",
     "start:server": "NODE_ENV=production node dist/index.js"
   },
@@ -53,13 +54,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "drizzle-orm": "^0.28.3",
     "esbuild": "^0.19.5",
     "express": "4.18.2",
+    "express-static-gzip": "^2.1.7",
     "helmet": "^7.1.0",
     "lucide-react": "^0.525.0",
     "nanoid": "^5.0.4",
+    "node-cache": "^5.1.2",
     "postcss": "^8.4.33",
     "postgres": "^3.3.5",
     "react": "^19.1.0",
@@ -77,6 +81,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
