--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "node fix-windows.js && concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "cd client && npm run dev",
     "dev:server": "nodemon --exec node --loader ts-node/esm server/index.ts",
-    "build": "npm install && cd client && npm install && npm run build && cd .. && esbuild server/index.ts server/optimize.ts server/performance.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && mkdir -p dist/client && cp -r client/dist/* dist/client/ && node optimize-assets.js",
+    "build": "npm install && cd client && npm install && npm run build && cd .. && esbuild server/index.ts server/optimize.ts server/performance.ts server/server-wrapper.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && mkdir -p dist/client && cp -r client/dist/* dist/client/ && node optimize-assets.js",
     "optimize": "node optimize-assets.js",
     "start": "NODE_ENV=production node dist/index.js",
     "start:server": "NODE_ENV=production node dist/index.js"
@@ -73,6 +73,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.28.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
     "vite": "^5.0.10",
