--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/dist",
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/client",
   "framework": "vite",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://onlinebank-backend.onrender.com/api/$1" }
+  "functions": {
+    "api/*.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 } 
